force-app/main/default/objects/Involved_Parties__c/Involved_Parties__c.object-meta.xml
<CustomObject>
    <label>Party</label>
    <nameField>
        <label>Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>