force-app/main/default/objects/Involved_Parties__c/fields/CRD_DFEH__c.field-meta.xml
<CustomField>
    <fullName>CRD_DFEH__c</fullName>
    <label>CRD/DFEH</label>
    <type>Date</type>
</CustomField>