force-app/main/default/objects/Involved_Parties__c/fields/CRD_DFEH_SOL__c.field-meta.xml
<CustomField>
    <fullName>CRD_DFEH_SOL__c</fullName>
    <formula>IF(Exclude_CRD_DFEH_SOL__c, NULL, IF(ISBLANK(CRD_DFEH__c), NULL, DATE(YEAR(CRD_DFEH__c)+1, MONTH(CRD_DFEH__c), DAY(CRD_DFEH__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRD/DFEH SOL</label>
    <type>Date</type>
</CustomField>