force-app/main/default/objects/Involved_Parties__c/fields/EEOC_RTS__c.field-meta.xml
<CustomField>
    <fullName>EEOC_RTS__c</fullName>
    <label>EEOC/RTS</label>
    <type>Date</type>
</CustomField>