force-app/main/default/objects/Involved_Parties__c/fields/EEOC_RTS_SOL__c.field-meta.xml
<CustomField>
    <fullName>EEOC_RTS_SOL__c</fullName>
    <formula>IF(Exclude_EEOC_RTS_SOL__c, NULL, IF(ISBLANK(EEOC_RTS__c), NULL, EEOC_RTS__c + 90))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EEOC/RTS SOL</label>
    <type>Date</type>
</CustomField>