force-app/main/default/objects/Involved_Parties__c/fields/Exclude_CRD_DFEH_SOL__c.field-meta.xml
<CustomField>
    <fullName>Exclude_CRD_DFEH_SOL__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows Admin to bypass SOL coming up due to (CRD/DFEH 1 year ago)</inlineHelpText>
    <label>Exclude CRD/DFEH SOL</label>
    <type>Checkbox</type>
</CustomField>