force-app/main/default/objects/Involved_Parties__c/fields/Exclude_EEOC_RTS_SOL__c.field-meta.xml
<CustomField>
    <fullName>Exclude_EEOC_RTS_SOL__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows Admin to bypass SOL coming up due to (EEOC/RTS 90 days ago)</inlineHelpText>
    <label>Exclude EEOC/RTS SOL</label>
    <type>Checkbox</type>
</CustomField>