force-app/main/default/objects/Involved_Parties__c/fields/Exclude_FEHA_SOL__c.field-meta.xml
<CustomField>
    <fullName>Exclude_FEHA_SOL__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows Admin to bypass SOL coming up due to (FEHA SOL)</inlineHelpText>
    <label>Exclude FEHA SOL</label>
    <type>Checkbox</type>
</CustomField>