force-app/main/default/objects/Involved_Parties__c/fields/Exclude_LDW1__c.field-meta.xml
<CustomField>
    <fullName>Exclude_LDW1__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows Admin to bypass SOL coming up due to (LDW 1 year ago)</inlineHelpText>
    <label>Exclude LDW1</label>
    <type>Checkbox</type>
</CustomField>