force-app/main/default/objects/Involved_Parties__c/fields/Exclude_LDW3__c.field-meta.xml
<CustomField>
    <fullName>Exclude_LDW3__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows Admin to bypass SOL coming up due to (LDW 3 years ago)</inlineHelpText>
    <label>Exclude LDW3</label>
    <type>Checkbox</type>
</CustomField>