force-app/main/default/objects/Involved_Parties__c/fields/Exclude_LDW4__c.field-meta.xml
<CustomField>
    <fullName>Exclude_LDW4__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows Admin to bypass SOL coming up due to (LDW 4 years ago)</inlineHelpText>
    <label>Exclude LDW4</label>
    <type>Checkbox</type>
</CustomField>