force-app/main/default/objects/Involved_Parties__c/fields/Exclude_LDW_6M__c.field-meta.xml
<CustomField>
    <fullName>Exclude_LDW_6M__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows Admin to bypass SOL coming up due to (LDW 6 months ago)</inlineHelpText>
    <label>Exclude LDW 6M</label>
    <type>Checkbox</type>
</CustomField>