force-app/main/default/objects/Involved_Parties__c/fields/Exclude_Term1__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Term1__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows Admin to bypass SOL coming up due to (Term 1 year ago)</inlineHelpText>
    <label>Exclude Term1</label>
    <type>Checkbox</type>
</CustomField>