force-app/main/default/objects/Involved_Parties__c/fields/Exclude_Term2__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Term2__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows Admin to bypass SOL coming up due to (Term 2 years ago)</inlineHelpText>
    <label>Exclude Term2</label>
    <type>Checkbox</type>
</CustomField>