force-app/main/default/objects/Involved_Parties__c/fields/Exclude_Term3__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Term3__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows Admin to bypass SOL coming up due to (Term 3 years ago)</inlineHelpText>
    <label>Exclude Term3</label>
    <type>Checkbox</type>
</CustomField>