force-app/main/default/objects/Involved_Parties__c/fields/Exclude_W_H_SOL__c.field-meta.xml
<CustomField>
    <fullName>Exclude_W_H_SOL__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows Admin to bypass SOL coming up due to (W&amp;H SOL)</inlineHelpText>
    <label>Exclude W&H SOL</label>
    <type>Checkbox</type>
</CustomField>