force-app/main/default/objects/Involved_Parties__c/fields/FEHA_SOL__c.field-meta.xml
<CustomField>
    <fullName>FEHA_SOL__c</fullName>
    <formula>IF(Exclude_FEHA_SOL__c, NULL, IF(ISBLANK(Term_Date__c), NULL, IF(Government__c, ADDMONTHS(Term_Date__c, 6) - 1, DATE(YEAR(Term_Date__c)+2, MONTH(Term_Date__c), DAY(Term_Date__c)) - 1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FEHA SOL</label>
    <type>Date</type>
</CustomField>