force-app/main/default/objects/Involved_Parties__c/fields/FEHA_SOL_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>FEHA_SOL_Satisfied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FEHA SOL Satisfied</label>
    <type>Checkbox</type>
</CustomField>