force-app/main/default/objects/Involved_Parties__c/fields/Government__c.field-meta.xml
<CustomField>
    <fullName>Government__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Government</label>
    <type>Checkbox</type>
</CustomField>