force-app/main/default/objects/Involved_Parties__c/fields/Involved_Party__c.field-meta.xml
<CustomField>
    <fullName>Involved_Party__c</fullName>
    <label>Involved Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Involved_Parties</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>