force-app/main/default/objects/Involved_Parties__c/fields/IsDefendant__c.field-meta.xml
<CustomField>
    <fullName>IsDefendant__c</fullName>
    <formula>TEXT(Relationship__c) == &apos;Defendant&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Defendant</label>
    <type>Checkbox</type>
</CustomField>