force-app/main/default/objects/Involved_Parties__c/fields/LDW1__c.field-meta.xml
<CustomField>
    <fullName>LDW1__c</fullName>
    <formula>IF(Exclude_LDW1__c, NULL, IF(ISBLANK(LDW__c), NULL, DATE(YEAR(LDW__c)+1, MONTH(LDW__c), DAY(LDW__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LDW1</label>
    <type>Date</type>
</CustomField>