force-app/main/default/objects/Involved_Parties__c/fields/LDW3__c.field-meta.xml
<CustomField>
    <fullName>LDW3__c</fullName>
    <formula>IF(Exclude_LDW3__c, NULL, IF(ISBLANK(LDW__c), NULL, DATE(YEAR(LDW__c)+3, MONTH(LDW__c), DAY(LDW__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LDW3</label>
    <type>Date</type>
</CustomField>