force-app/main/default/objects/Involved_Parties__c/fields/LDW4__c.field-meta.xml
<CustomField>
    <fullName>LDW4__c</fullName>
    <formula>IF(Exclude_LDW4__c, NULL, IF(ISBLANK(LDW__c), NULL, DATE(YEAR(LDW__c)+4, MONTH(LDW__c), DAY(LDW__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LDW4</label>
    <type>Date</type>
</CustomField>