force-app/main/default/objects/Involved_Parties__c/fields/LDW_6M__c.field-meta.xml
<CustomField>
    <fullName>LDW_6M__c</fullName>
    <formula>IF(Exclude_LDW_6M__c, NULL, IF(AND(Government__c, NOT(ISBLANK(LDW__c))), ADDMONTHS(LDW__c, 6), NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LDW 6M</label>
    <type>Date</type>
</CustomField>