force-app/main/default/objects/Involved_Parties__c/fields/Native_American_Military_Base__c.field-meta.xml
<CustomField>
    <fullName>Native_American_Military_Base__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Native American/Military Base</label>
    <type>Checkbox</type>
</CustomField>