force-app/main/default/objects/Involved_Parties__c/fields/Service_of_FAC__c.field-meta.xml
<CustomField>
    <fullName>Service_of_FAC__c</fullName>
    <label>Service of FAC</label>
    <type>Date</type>
</CustomField>