force-app/main/default/objects/Involved_Parties__c/fields/Service_of_S_C__c.field-meta.xml
<CustomField>
    <fullName>Service_of_S_C__c</fullName>
    <label>Service of S&amp;C</label>
    <type>Date</type>
</CustomField>