force-app/main/default/objects/Involved_Parties__c/fields/Term1__c.field-meta.xml
<CustomField>
    <fullName>Term1__c</fullName>
    <formula>IF(Exclude_Term1__c, NULL, IF(AND(Government__c, NOT(ISBLANK(Term_Date__c))), DATE(YEAR(Term_Date__c)+1, MONTH(Term_Date__c), DAY(Term_Date__c)), NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term1</label>
    <type>Date</type>
</CustomField>