force-app/main/default/objects/Involved_Parties__c/fields/Term2__c.field-meta.xml
<CustomField>
    <fullName>Term2__c</fullName>
    <formula>IF(Exclude_Term2__c, NULL, IF(ISBLANK(Term_Date__c), NULL, DATE(YEAR(Term_Date__c)+2, MONTH(Term_Date__c), DAY(Term_Date__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term2</label>
    <type>Date</type>
</CustomField>