force-app/main/default/objects/Involved_Parties__c/fields/Term3__c.field-meta.xml
<CustomField>
    <fullName>Term3__c</fullName>
    <formula>IF(Exclude_Term3__c, NULL, IF(ISBLANK(Term_Date__c), NULL, DATE(YEAR(Term_Date__c)+3, MONTH(Term_Date__c), DAY(Term_Date__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term3</label>
    <type>Date</type>
</CustomField>