force-app/main/default/objects/Involved_Parties__c/fields/Term_6M__c.field-meta.xml
<CustomField>
    <fullName>Term_6M__c</fullName>
    <formula>IF(Exclude_Term_6M__c, NULL, IF(AND(Government__c, NOT(ISBLANK(Term_Date__c))), ADDMONTHS(Term_Date__c, 6), NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term 6M</label>
    <type>Date</type>
</CustomField>