force-app/main/default/objects/Involved_Parties__c/fields/W_H_SOL__c.field-meta.xml
<CustomField>
    <fullName>W_H_SOL__c</fullName>
    <formula>IF(Exclude_W_H_SOL__c, NULL, IF(ISBLANK(LDW__c), NULL, IF(Government__c, ADDMONTHS(LDW__c, 6) - 1, DATE(YEAR(LDW__c)+1, MONTH(LDW__c), DAY(LDW__c)) - 1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>W&amp;H SOL</label>
    <type>Date</type>
</CustomField>