force-app/main/default/objects/Involved_Parties__c/fields/W_H_SOL_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>W_H_SOL_Satisfied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>W&H SOL Satisfied</label>
    <type>Checkbox</type>
</CustomField>